parkrun-stats - Use Country name for country text and titles.